syntax = "proto3";
package stockbit;

service Stockbit {
  rpc GetMovieInfo(GetMovieInfoRequest) returns (GetMovieInfoResponse) {}
}

message GetMovieInfoRequest {
  string keyword = 1;
  int64 page = 2;
}

message MovieInfo {
  string title = 1;
  string year = 2;
  string imdb_id = 3;
  string type = 4;
  string poster = 5;
}

message GetMovieInfoResponse{
  repeated MovieInfo data = 1;
}